# amalgama-pq

./: .coveragerc  .gitignore  .travis.yml  LICENSE  Pipfile  README.md  pyproject.toml  setup.py
amalgama/: __init__.py  amalgama.py  amalgama_OOP.py  amalgama_bs.py
tests/: test.csv  test_amalgama_pq.py  test_csv.py  test_split_before.py
tests/lyrics_page/: amalgama_lyrics.css  amalgama_lyrics.html  extract_html&css.py
tests/tests_data/: get_all_original_lines.json  get_all_originals.json  get_all_translates  get_all_translates.json  get_all_translates_lines  get_all_translates_lines.json  get_first_original_text.json  get_first_translate_text  get_first_translate_text.json  lyrics.html  pickle_ser.py  prepare_data.py  result.html  test.csv
